@@ -1,7 +1,6 @@
 ROADMAP TO FUTURE RELEASES
 
 0.7.1
-! Fix cloning of object groups
 * Check that tile palette panel doesn't keep listening after being replaced
 * Update translations for dialog.saveas.confirm.mismatch
 * Make continuous layout and tiles per row behaviour configurable
